--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Dennis Miller Portfolio</title>
+        <link rel = "stylesheet" href ="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+        <link rel = "stylesheet" href ="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    </head>
     <body>
-        <h1>Hello World!</h1>
-        <p>Hosted with GithubPages.</p>
+        <header>
+            <div class = "logo">
+                <img src = "images/mrgoodman.png" alt ="">
+            </div>
+            <nav class="nav">
+                <ul class="nav_list">
+                    <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
+                    <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
+                    <li class="nav_item"><a href="#" class="nav_link">Projects</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <!-- Home -->
+        <section class = "intro" id ="home">
+            <h1 class = "section_title">
+                Hi, I'm <strong>Dennis Miller</strong>
+            </h1>
+            <p class = "section_subtitle">software developer</p>
+            <img src = "images/mrgoodman.png" alt ="a picture of Dennis">
+        </section>
+
+        <!-- About -->
+        <section class="about_me" id = "about">
+            <h2 class="about_title">About Me</h2>
+            <p class="about_subtitle"></p>
+
+            <div class="about_body">
+                <p></p>
+                <p></p>
+            </div>
+        </section>
+
+        <!-- Projects -->
+        <section class="my_projects" id="projects">
+            <h2 class="project_title">My Projects</h2>
+            <p class="project_subtitle"></p>
+        </section>
+
+        <!-- Footer -->
+        <footer>
+            <a href="mailto:deanicee@gmail.com" class="footer_link">deanicee@gmail.com</a>
+            <a href="https://github.com/DeanIce" class="footer_link">Github</a>
+        </footer>
     </body>
 </html>
