--- a/index.html
+++ b/index.html
@@ -28,26 +28,34 @@
             <h1 class = "intro_title">
                 Hi, I'm <strong>Dennis Miller</strong>
             </h1>
-            <p class = "intro_subtitle">software developer</p>
-            <img src = "images/mrgoodman.png" alt ="a picture of Dennis" class ="portrait_img">
+            <p class = "intro_subtitle">Software Developer</p>
+            <img src = "images/dennis_close.jpg" alt ="a picture of Dennis" class ="portrait_img">
         </section>
 
         <!-- About -->
         <section class="about_me" id = "about">
             <h2 class="about_title">About Me</h2>
-            <p class="about_subtitle">Dennis Miller</p>
+            <p class="about_subtitle">Ohio State Computer Science Engineering Graduate</p>
 
             <div class="about_body">
                 <p>Welcome to my portfolio! I graduated from The Ohio State university with a B.S. in Computer Science Engineering in May 2022. Throughout my college career I’ve worked on a variety of projects, some of which are showcased here. I specialized in game design at Ohio State, where I got hands-on experience working with a development team and building games from the ground up.</p>
                 <p>In my free time I’m always looking for the next hobby or project to try, from learning programming languages to skydiving. I’m an avid player of games, including playing League of Legends for the OSU collegiate team, and being the dungeon master in a custom Dungeons and Dragons campaign for my friends. I design and print 3D resin models myself where I airbrush and paint them when I can find the time.</p>
                 <p>I love getting to know new people, feel free to check out my resume or contact me if you have any questions or are just looking to chat!</p>
             </div>
+
+            <img src="images/skydive_edited.JPEG" alt="About me picture" class="about_me_img">
         </section>
 
         <!-- Projects -->
         <section class="my_projects" id="projects">
             <h2 class="project_title">My Projects</h2>
-            <p class="project_subtitle"></p>
+            <p class="project_subtitle">A collection of my previous work</p>
+
+            <div class="portfolio">
+                <a href="#" class="portfolio_item">
+                    <img src="images/astrorogue.png" alt="" class = "portfolio_image">
+                </a>
+            </div>
         </section>
 
         <!-- Footer -->
