--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                 <a href="#" class="portfolio_item">
                     <img src="images/astrorogue.png" alt="" class = "portfolio_image">
                 </a>
+                <a href="#" class="portfolio_item">
+                    <img src="images/kirby.png" alt="" class = "portfolio_image">
+                </a>
             </div>
         </section>
 
