--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
         </section>
 
         <!-- Footer -->
-        <footer>
-            <a href="mailto:deanicee@gmail.com" class="footer_link">deanicee@gmail.com</a>
-            <a href="https://github.com/DeanIce" class="footer_link">Github</a>
+        <footer class="footer">
+            <ul class="contact_list">
+                <li class="contact_item"><a href="mailto:deanicee@gmail.com" class="footer_link">deanicee@gmail.com</a></li>
+                <li class="contact_item"><a href="https://github.com/DeanIce" class="footer_link">Github</a></li>
+                <li class="contact_item"><a href="https://osu.joinhandshake.com/stu/users/11559864" class="footer_link">Handshake</a></li>
+            </ul>
         </footer>
         
     </body>
