Project pages and javascript

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     </head>
     <body>
         <header>
+            <button class="nav_toggle" aria-label="toggel navigation window">
+                <span class="nav_button"></span>
+            </button>
             <nav class="nav">
                 <ul class="nav_list">
                     <li class="nav_item"><a href="#home" class="nav_link">Home</a></li>
                     <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
-                    <li class="nav_item"><a href="#" class="nav_link">Projects</a></li>
+                    <li class="nav_item"><a href="#projects" class="nav_link">Projects</a></li>
                 </ul>
             </nav>
         </header>
@@ -49,13 +52,13 @@
         <!-- Projects -->
         <section class="my_projects" id="projects">
             <h2 class="project_title">My Projects</h2>
-            <p class="project_subtitle">A collection of my previous work</p>
+            <p class="project_subtitle">A collection of some of my previous work</p>
 
             <div class="portfolio">
-                <a href="#" class="portfolio_item">
+                <a href="portfolio_item.html" class="portfolio_item">
                     <img src="images/astrorogue.png" alt="" class = "portfolio_image">
                 </a>
-                <a href="#" class="portfolio_item">
+                <a href="portfolio_item_2.html" class="portfolio_item">
                     <img src="images/kirby.png" alt="" class = "portfolio_image">
                 </a>
             </div>
@@ -69,6 +72,8 @@
                 <li class="contact_item"><a href="https://osu.joinhandshake.com/stu/users/11559864" class="footer_link">Handshake</a></li>
             </ul>
         </footer>
+
+        <script src="js/index.js"></script>
         
     </body>
 </html>
