--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <ul class="contact_list">
                 <li class="contact_item"><a href="mailto:deanicee@gmail.com" class="footer_link">deanicee@gmail.com</a></li>
                 <li class="contact_item"><a href="https://github.com/DeanIce" class="footer_link">Github</a></li>
-                <li class="contact_item"><a href="https://www.linkedin.com/in/dennis-miller-840b09200/" class="footer_link">linkedin</a></li>
+                <li class="contact_item"><a href="https://www.linkedin.com/in/dennis-miller-840b09200/" class="footer_link">LinkedIn</a></li>
             </ul>
         </footer>
 
