--- a/portfolio_item.html
+++ b/portfolio_item.html
@@ -39,7 +39,9 @@
             at OSU, designing and programming a functional game from the ground up was exhilirating. Some of my favorite features I got to work on was the unique planet gravity, the procedural level generation, Unity's new UI framework,
             and the expansive item system.
             </p>
-            <img src="images/FirePlanets.png" alt="">
+            <iframe width="420" height="315"
+            src="https://www.youtube.com/watch?v=eooRHEeP-gY">
+            </iframe>
             <p>My team and I were in charge of setting our own goals and tracking progress using scrum framework. I helped create bi-weekly presentations showcasing progress and displaying some of our metrics, like a burndown chart.
             I got to experience a vast ammount of game design techniques, from importing and exporting assets, to sending demo builds to friends and family for a small beta testing phase.
             You can find the link to the github respository below, as well as short gameplay trailer!
