--- a/portfolio_item.html
+++ b/portfolio_item.html
@@ -40,7 +40,7 @@
             and the expansive item system.
             </p>
             <iframe width="420" height="315"
-            src="https://www.youtube.com/watch?v=eooRHEeP-gY">
+            src="https://www.youtube.com/embed/watch?v=eooRHEeP-gY">
             </iframe>
             <p>My team and I were in charge of setting our own goals and tracking progress using scrum framework. I helped create bi-weekly presentations showcasing progress and displaying some of our metrics, like a burndown chart.
             I got to experience a vast ammount of game design techniques, from importing and exporting assets, to sending demo builds to friends and family for a small beta testing phase.
