--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1 class = "intro_title">
                 Hi, I'm <strong>Dennis Miller</strong>
             </h1>
-            <p class = "intro_subtitle">Software Developer</p>
+            <p class = "intro_subtitle">Software and Game Developer</p>
             <img src = "images/dennis_close.jpg" alt ="a picture of Dennis" class ="portrait_img">
         </section>
 
@@ -41,9 +41,12 @@
             <p class="about_subtitle">Ohio State Computer Science Engineering Graduate</p>
 
             <div class="about_body">
-                <p>Welcome to my portfolio! I graduated from The Ohio State university with a B.S. in Computer Science Engineering in May 2022. Throughout my college career I’ve worked on a variety of projects, some of which are showcased here. I specialized in game design at Ohio State, where I got hands-on experience working with a development team and building games from the ground up.</p>
-                <p>In my free time I’m always looking for the next hobby or project to try, from learning programming languages to skydiving. I’m an avid player of games, including playing League of Legends for the OSU collegiate team, and being the dungeon master in a custom Dungeons and Dragons campaign for my friends. I design and print 3D resin models myself where I airbrush and paint them when I can find the time.</p>
-                <p>I love getting to know new people, feel free to check out my resume or contact me if you have any questions or are just looking to chat!</p>
+                <p>Welcome to my portfolio! I graduated from The Ohio State university with a B.S. in Computer Science Engineering in May 2022. Throughout my college career I’ve worked on a variety of projects, some of which are showcased here.
+                     I specialized in game design at Ohio State, where I got hands-on experience working with a development team and building games from the ground up. I also have extensive experience in operating systems, networking,
+                    cyber secuirty and web design (including this very website).</p>
+                <p>In my free time I’m always looking for the next hobby or project to try, from learning programming languages to skydiving. I’m an avid player of games, including playing League of Legends for the OSU collegiate team,
+                     and being the dungeon master in a custom Dungeons and Dragons campaign for my friends. I design and print 3D resin models myself where I airbrush and paint them when I can find the time.</p>
+                <p>Feel free to check out my resume below or contact me if you have any questions!</p>
             </div>
 
             <img src="images/skydive_edited.JPEG" alt="About me picture" class="about_me_img">
@@ -68,6 +71,7 @@
         <footer class="footer">
             <ul class="contact_list">
                 <li class="contact_item"><a href="mailto:deanicee@gmail.com" class="footer_link">deanicee@gmail.com</a></li>
+                <li class="contact_item"><a href="images/DennisMiller.pdf" class="footer_link">Resume</a></li>
                 <li class="contact_item"><a href="https://github.com/DeanIce" class="footer_link">Github</a></li>
                 <li class="contact_item"><a href="https://www.linkedin.com/in/dennis-miller-840b09200/" class="footer_link">LinkedIn</a></li>
             </ul>
