--- a/portfolio_item.html
+++ b/portfolio_item.html
@@ -35,17 +35,17 @@
         </section>
 
         <div class="project_item">
-            <p>AstroRogue is a rouge-like 3rd person shooter that I helped develop in the spring of 2022. This was certainly my favorite project I developed
-            at OSU, designing and programming a functional game from the ground up was exhilirating. Some of my favorite features I got to work on was the unique planet gravity, the procedural level generation, Unity's new UI framework,
-            and the expansive item system.
+            <p>AstroRogue is a rouge-like 3rd person shooter with inspiration from Risk of Rain 2 and Super Mario Galaxy. As a part of a team, I developed procedural level genertation, programmed and implemented the UI with Unity's new UI framework, helped design
+                custom planetary gravity and more.
             </p>
-            <iframe width="420" height="315"
-            src="https://www.youtube.com/embed/watch?v=eooRHEeP-gY">
-            </iframe>
+            <iframe width="1000" height="620" src="https://www.youtube.com/embed/eooRHEeP-gY" title="Astrorogue Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <p>My team and I were in charge of setting our own goals and tracking progress using scrum framework. I helped create bi-weekly presentations showcasing progress and displaying some of our metrics, like a burndown chart.
-            I got to experience a vast ammount of game design techniques, from importing and exporting assets, to sending demo builds to friends and family for a small beta testing phase.
-            You can find the link to the github respository below, as well as short gameplay trailer!
+            As this was a professionally led development project, we had extensive planning meetings and compiled detailed information aobut progress and goals.
             </p>
+            <div class="project_multi_images">
+                <img src="images/codesample.png" alt="" class ="project_img_alt">
+                <img src="images/codesample2.png" alt="" class ="project_img_alt">
+            </div>
             <ul class="project_links">
                 <li class="link_item"><a href="https://github.com/DeanIce/astrorouge" class="proj_link">Github</a></li>
                 <li class="link_item"><a href="https://www.youtube.com/watch?v=eooRHEeP-gY" class="proj_link">Youtube</a></li>
