--- a/portfolio_item_2.html
+++ b/portfolio_item_2.html
@@ -35,17 +35,16 @@
         </section>
 
         <div class="project_item">
-            <p>One of my earliest game design projects was to entire recreate the first level in Nintendo's Super Mario Bros. using C# and monogame. In the spring of 2021 I learned how to use monogame, create sprites,
-            design a collision handler from scratch, and much more to recreate that famous level. We were placed in teams and tasked to expand on the game in some meaningful way, most groups decided to simply create the
-            next level. My team and I however, decided to go outside of the box and recreate another classic, Kirby's Adventure
+            <p>In spring of 2021 I was a part of a team designated to recreate the first level of Super Mario bros using MonoGame and C#. I created sprite animations as well as handeled all collision detection and HUD updates. We stuck to strict pre-designed
+                PBI's, and were then tasked to expand upon the game in a meaningful way. My team and I however had great chemistry and decided to create our own Scrum and create the first level of Kirby's Adventure.
+
             </p>
             <div class="project_multi_images">
                 <img src="images/kirby.png" alt="" class="project_img">
                 <img src="images/mariogame.png" alt="" class="project_img">
             </div>
-            <p>We desinged a lengthy PBI document detailing the features we planned on adding, and tracked our progress in Azure DevOps. I gained skills working in a tight deadline, leading team meetings, and most importantly learning
-            when to call a project finished. While there is still a lot that could be done with our version of Kirby, we accomplished all the goals initially set and I'm proud of the final result. It was this project that solidified my love
-            for game design and programming alongside my fellow developers. Below you can find the link to first level of my version of Kirby's Adventure!
+            <p>We desinged a lengthy PBI document detailing the features we planned on adding, and tracked our progress in Azure DevOps. I led team meetings and created enemy animations as well as designed the level switch system, defeat and victory screens.
+                I also developed an important skill to learn when to call a project finished. This was the project that solidifed my love for game design and you can find the first level using the link below!
             </p>
             <ul class="project_links">
                 <li class="link_item"><a href="https://github.com/DeanIce/KirbyGame" class="proj_link">Github</a></li>
