New portfolio item and services

--- a/index.html
+++ b/index.html
@@ -35,22 +35,31 @@
             <img src = "images/dennis_close.jpg" alt ="a picture of Dennis" class ="portrait_img">
         </section>
 
-        <!-- About -->
-        <section class="about_me" id = "about">
-            <h2 class="about_title">About Me</h2>
-            <p class="about_subtitle">Ohio State Computer Science Engineering Graduate</p>
+        <p class="services_subtitle"></p>
 
-            <div class="about_body">
-                <p>Welcome to my portfolio! I graduated from The Ohio State university with a B.S. in Computer Science Engineering in May 2022. Throughout my college career I’ve worked on a variety of projects, some of which are showcased here.
-                     I specialized in game design at Ohio State, where I got hands-on experience working with a development team and building games from the ground up. I also have extensive experience in operating systems, networking,
-                    cyber secuirty and web design (including this very website).</p>
-                <p>In my free time I’m always looking for the next hobby or project to try, from learning programming languages to skydiving. I’m an avid player of games, including playing League of Legends for the OSU collegiate team,
-                     and being the dungeon master in a custom Dungeons and Dragons campaign for my friends. I design and print 3D resin models myself where I airbrush and paint them when I can find the time.</p>
-                <p>Feel free to check out my resume below or contact me if you have any questions!</p>
+        <!-- Services -->
+        <section class="my_services" id = "services">
+            <h2 class="services_title">My Expertise</h2>
+            <div class="services">
+                <div class="service">
+                    <h3>Games & Apps</h3>
+                    <p>I design and develop games and other applications. I've created multiple games as part of a team and various personal projects in both
+                        Unreal Engine 5 and Unity.
+                    </p>
+                </div>
+                <div class="service">
+                    <h3>UI and Design</h3>
+                    <p>I have experience developing GUIs and UIs like HUDs and menus both in and outside of games. I also work on app and web design including this very page.</p>
+                </div>
+                <div class="service">
+                    <h3>AI</h3>
+                    <p>I've designed procedural generation tools in game projects, and worked with AI to create dynamic and interesting gameplay elements, as well
+                        as robust navigation systems and state/behavior trees.
+                    </p>
+                </div>
             </div>
-
-            <img src="images/skydive_edited.JPEG" alt="About me picture" class="about_me_img">
         </section>
+
 
         <!-- Projects -->
         <section class="my_projects" id="projects">
@@ -64,7 +73,27 @@
                 <a href="portfolio_item_2.html" class="portfolio_item">
                     <img src="images/kirby.png" alt="" class = "portfolio_image">
                 </a>
+                <a href="portfolio_item_3.html" class="portfolio_item">
+                    <img src="images/axe.jpg" alt="" class = "portfolio_image">
+                </a>
             </div>
+        </section>
+
+        <!-- About -->
+        <section class="about_me" id = "about">
+            <h2 class="about_title">About Me</h2>
+            <p class="about_subtitle">Ohio State Computer Science Engineering Graduate</p>
+
+            <div class="about_body">
+                <p>I graduated from The Ohio State university with a B.S. in Computer Science Engineering in May 2022. Throughout my college career I’ve worked on a variety of projects, some of which are showcased here.
+                     I specialized in game design at Ohio State, where I got hands-on experience working with a development team and building games from the ground up. I also have extensive experience in operating systems, networking,
+                    cyber secuirty and web design (including this very website).</p>
+                <p>In my free time I’m always looking for the next hobby or project to try, from learning programming languages to skydiving. I’m an avid player of games, including playing League of Legends for the OSU collegiate team,
+                     and being the dungeon master in a custom Dungeons and Dragons campaign for my friends. I design and print 3D resin models myself where I airbrush and paint them when I can find the time.</p>
+                <p>Feel free to check out my resume below or contact me if you have any questions!</p>
+            </div>
+
+            <img src="images/skydive_edited.JPEG" alt="About me picture" class="about_me_img">
         </section>
 
         <!-- Footer -->
